--- a/src/main/ui/src/styles.scss
+++ b/src/main/ui/src/styles.scss
@@ -1,3 +1,12 @@
+.rounderButton {
+  border-radius: 20px;
+  margin-right: 0.1rem;
+}
+
+.activeLink {
+  background-color: #604c8f !important;
+}
+
 .btn-group-xs > .btn, .btn-xs {
   padding: .25rem .4rem;
   font-size: .875rem;
