--- a/src/main/ui/src/app/components/map/map.component.html
+++ b/src/main/ui/src/app/components/map/map.component.html
@@ -1,1 +1,1 @@
-<p>map works!</p>
+<div id="map" style="top: 3.3rem; left:0px;width: 100%; height: 100%; position:fixed; background-color: #125699"></div>
